[package]
name = "simple-file-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0.58"
chrono = "0.4"
